# websearch-mcp

./: AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
