[project]
name = "websearch-mcp"
version = "0.1.0"
description = "Web search MCP server with AI-powered content extraction"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "crawl4ai>=0.4.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
websearch-mcp = "main:main"
